src/objects/Installed_System__c.object
<CustomObject>
    <fields>
        <fullName>October_Guarantee__c</fullName>
        <label>October Guarantee</label>
        <summarizedField>Annual_Production__c.October_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>October_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>October_Daily_Peak_Sun_Hours__c * 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>October Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>October_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>October Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>October_Solar_Access__c</fullName>
        <label>October Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operation_Start_Date__c</fullName>
        <description>Operation Start Date</description>
        <inlineHelpText>Operation Start Date</inlineHelpText>
        <label>Operation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Optimal_Site_Quality__c</fullName>
        <formula>Property__r.Optimal_Site_Quality_kWh_y_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optimal Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <description>Owner Type</description>
        <inlineHelpText>Owner Type</inlineHelpText>
        <label>Owner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Generator Broker/Aggregator</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PJM_Id__c</fullName>
        <externalId>true</externalId>
        <label>PJM Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Astrum PM 2.0 Project</description>
        <inlineHelpText>Astrum PM 2.0 Project</inlineHelpText>
        <label>PM 2.0 Project</label>
        <referenceTo>PM_Project__c</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Installed_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Estimate_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Estimate Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Start_Date__c</fullName>
        <label>Production Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Year_Starting_Month__c</fullName>
        <formula>MONTH(Generation_Start_Date__c)</formula>
        <label>Production Year Starting Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Installed_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_Production_kWh_yr__c</fullName>
        <formula>Quoted_System_Design__r.System_Design__r.Total_Projected_Annual_Output_kWh_y__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Annual Production (kWh/yr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_April_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *April_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected April Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_August_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *August_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected August Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_December_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *December_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected December Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_February_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *February_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected February Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_January_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *January_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected January Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_July_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *July_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected July Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_June_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *June_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected June Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_March_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *March_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected March Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_May_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *May_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected May Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_November_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *November_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected November Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_October_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *October_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected October Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_September_Production_kWh__c</fullName>
        <formula>Projected_Annual_Production_kWh_yr__c *September_Percent_Yearly_Sun_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected September Production (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Installed_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quoted_System_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quoted System Design</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Installed_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recorded_System_Size_kW__c</fullName>
        <description>Total System Size (kW)</description>
        <inlineHelpText>Total System Size (kW)</inlineHelpText>
        <label>Recorded System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Date__c</fullName>
        <description>Date SREC Contract was signed by Customer</description>
        <inlineHelpText>Date SREC Contract was signed by Customer</inlineHelpText>
        <label>SREC Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_End_Date__c</fullName>
        <description>SREC Contract End Date (calculated from start date and contract length)</description>
        <formula>SREC_Contract_Start_Date__c +  ((SREC_Contract_Length_months__c /12)*365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SREC Contract End Date (calculated from start date and contract length)</inlineHelpText>
        <label>SREC Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Length_months__c</fullName>
        <description>Length of the SREC Contract with Customer in MONTHS</description>
        <inlineHelpText>Length of the SREC Contract with Customer in MONTHS</inlineHelpText>
        <label>SREC Contract Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Payment_Terms__c</fullName>
        <description>Payment Terms of SREC Contract with Customer</description>
        <inlineHelpText>Payment Terms of SREC Contract with Customer</inlineHelpText>
        <label>SREC Contract Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Start_Date__c</fullName>
        <description>Start Date of SREC Contract with Customer</description>
        <inlineHelpText>Start Date of SREC Contract with Customer</inlineHelpText>
        <label>SREC Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Type__c</fullName>
        <description>Type of SREC Contract establiched with Customer</description>
        <inlineHelpText>Type of SREC Contract establiched with Customer</inlineHelpText>
        <label>SREC Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Curve__c</fullName>
        <description>This System&apos;s SREC Curve</description>
        <inlineHelpText>This System&apos;s SREC Curve</inlineHelpText>
        <label>SREC Curve</label>
        <picklist>
            <picklistValues>
                <fullName>DC SREC Curve 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC SREC Curve 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA SREC Curve 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA SREC Curve 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD SREC Curve 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD SREC Curve 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Curve 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Curve 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH SREC Curve 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH SREC Curve 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA SREC Curve 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA SREC Curve 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SREC_Opt_in_Term_Length__c</fullName>
        <description>SREC Opt-in Term Length in QUARTER(S)</description>
        <inlineHelpText>SREC Opt-in Term Length in QUARTER(S)</inlineHelpText>
        <label>SREC Opt-in Term Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SREC_Opt_in_Term_Start_Quarter__c</fullName>
        <description>DOER Start Quarter for SRECs eligible to be placed into the SREC clearinghouse auction</description>
        <inlineHelpText>DOER Start Quarter for SRECs eligible to be placed into the SREC clearinghouse auction</inlineHelpText>
        <label>SREC Opt-in Term Start Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>2011 Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011 Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011 Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011 Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Installed Systems</relationshipLabel>
        <relationshipName>Installed_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>September_Daily_Peak_Sun_Hours__c</fullName>
        <label>September Daily Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Guarantee__c</fullName>
        <label>September Guarantee</label>
        <summarizedField>Annual_Production__c.September_Production_Guarantee_kWh__c</summarizedField>
        <summaryForeignKey>Annual_Production__c.Installed_System__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>September_Monthly_Peak_Sun_Hours__c</fullName>
        <formula>September_Daily_Peak_Sun_Hours__c * 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>September Monthly Peak Sun Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Percent_Yearly_Sun_Hours__c</fullName>
        <formula>September_Daily_Peak_Sun_Hours__c / ( January_Daily_Peak_Sun_Hours__c + February_Daily_Peak_Sun_Hours__c +  March_Daily_Peak_Sun_Hours__c +  April_Daily_Peak_Sun_Hours__c +  May_Daily_Peak_Sun_Hours__c +  June_Daily_Peak_Sun_Hours__c +  July_Daily_Peak_Sun_Hours__c +  August_Daily_Peak_Sun_Hours__c +  September_Daily_Peak_Sun_Hours__c +  October_Daily_Peak_Sun_Hours__c +  November_Daily_Peak_Sun_Hours__c  +  December_Daily_Peak_Sun_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>September Percent Yearly Sun Hours (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>September_Solar_Access__c</fullName>
        <label>September Solar Access (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Site_Quality__c</fullName>
        <formula>Quoted_System_Design__r.System_Design__r.Overall_Site_Quality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Grant_Date_Received__c</fullName>
        <description>Date State Grant was Received</description>
        <inlineHelpText>Date State Grant was Received</inlineHelpText>
        <label>State Grant Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Grant_Expected_vs_Received__c</fullName>
        <description>State Grant  Expected vs Received ($)</description>
        <formula>State_Grant_Total_Received__c -  State_Grant_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>State Grant Expected vs Received ($)</inlineHelpText>
        <label>State Grant Expected vs Received ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Grant_Total_Received__c</fullName>
        <description>Total State Grant Received ($)</description>
        <inlineHelpText>Total State Grant Received ($)</inlineHelpText>
        <label>State Grant Total Received ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Grant_Total__c</fullName>
        <description>Total State Grant Amount</description>
        <formula>State_Grant_W__c * System_Size_kW__c *1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total State Grant Amount</inlineHelpText>
        <label>State Grant Total ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Grant_W__c</fullName>
        <description>State Grant ($/W)</description>
        <inlineHelpText>State Grant ($/W)</inlineHelpText>
        <label>State Grant ($/W)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Property__r.Property_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Certification__c</fullName>
        <defaultValue>&apos;Not Yet Certified&apos;</defaultValue>
        <label>System Certification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Makeup__c</fullName>
        <formula>Sales_Order__r.System_Makeup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Makeup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_kW__c</fullName>
        <formula>Sales_Order__r.System_Size_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_State__c</fullName>
        <description>State Where System is Located</description>
        <inlineHelpText>State Where System is Located</inlineHelpText>
        <label>System State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tranche_Number__c</fullName>
        <description>Astrum Tranche Number</description>
        <inlineHelpText>Astrum Tranche Number</inlineHelpText>
        <label>Tranche Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treasury_Grant_Approval_Date__c</fullName>
        <description>LEASE ONLY - Treasury Grant Approval Date</description>
        <inlineHelpText>LEASE ONLY - Treasury Grant Approval Date</inlineHelpText>
        <label>Treasury Grant Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treasury_Grant_Filing_Date__c</fullName>
        <description>LEASE ONLY - Treasury Grant Filing Date</description>
        <inlineHelpText>LEASE ONLY - Treasury Grant Filing Date</inlineHelpText>
        <label>Treasury Grant Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Treasury_Grant_Received_Amount__c</fullName>
        <description>LEASE ONLY - Treasury Grant Received Amount</description>
        <inlineHelpText>LEASE ONLY - Treasury Grant Received Amount</inlineHelpText>
        <label>Treasury Grant Received Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treasury_Grant_Requested_Amount__c</fullName>
        <description>LEASE ONLY - Amount of Treasury Grant Requested</description>
        <inlineHelpText>LEASE ONLY - Amount of Treasury Grant Requested</inlineHelpText>
        <label>Treasury Grant Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treasury_Grant_Requested_vs_Received__c</fullName>
        <description>LEASE ONLY  - Treasury Grant Requested vs Received</description>
        <formula>Treasury_Grant_Received_Amount__c - Treasury_Grant_Requested_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LEASE ONLY  - Treasury Grant Requested vs Received</inlineHelpText>
        <label>Treasury Grant Requested vs Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X10_Payment_Documents_Submitted__c</fullName>
        <defaultValue>&apos;Not Yet Submitted&apos;</defaultValue>
        <description>10% Payment - Invoice Documents - Submitted by Astrum Solar</description>
        <inlineHelpText>10% Payment - Invoice Documents - Submitted by Astrum Solar</inlineHelpText>
        <label>10% Payment - Documents Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10_Payment_Invoice_Authorized__c</fullName>
        <defaultValue>&apos;Not Yet Authorized&apos;</defaultValue>
        <description>10% Payment - Invoice Authorized by Constellation Energy</description>
        <inlineHelpText>10% Payment - Invoice Authorized by Constellation Energy</inlineHelpText>
        <label>10% Payment - Invoice Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1603_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is This System 1603 Compliant?</description>
        <inlineHelpText>Is This System 1603 Compliant?</inlineHelpText>
        <label>1603 Compliant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Payment_Documents_Submitted__c</fullName>
        <defaultValue>&apos;Not Yet Submitted&apos;</defaultValue>
        <description>30% Payment - Invoice Documents - Submitted by Astrum Solar</description>
        <inlineHelpText>30% Payment - Invoice Documents - Submitted by Astrum Solar</inlineHelpText>
        <label>30% Payment - Documents - Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X30_Payment_Invoice_Authorized__c</fullName>
        <defaultValue>&apos;Not Yet Authorized&apos;</defaultValue>
        <description>30% Payment - Invoice Authorized by Constellation Energy</description>
        <inlineHelpText>30% Payment - Invoice Authorized by Constellation Energy</inlineHelpText>
        <label>30% Payment - Invoice Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X60_Payment_Documents_Submitted__c</fullName>
        <defaultValue>&apos;Not Yet Submitted&apos;</defaultValue>
        <description>60% Payment - Invoice Documents - Submitted by Astrum Solar</description>
        <inlineHelpText>60% Payment - Invoice Documents - Submitted by Astrum Solar</inlineHelpText>
        <label>60% Payment - Documents - Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X60_Payment_Invoice_Authorized__c</fullName>
        <defaultValue>&apos;Not Yet Authorized&apos;</defaultValue>
        <description>60% Payment - Invoice Authorized by Constellation Energy</description>
        <inlineHelpText>60% Payment - Invoice Authorized by Constellation Energy</inlineHelpText>
        <label>60% Payment - Invoice Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Installation__c</fullName>
        <formula>TEXT(YEAR( Generation_Start_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Installation</label>
        <type>Text</type>
    </fields>
    <label>Installed System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Property__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Quoted_System_Design__c</columns>
        <columns>PJM_Id__c</columns>
        <columns>Enphase_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>SYS-002627</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SYS-{000000}</displayFormat>
        <label>Installed System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>